# simpals-test

./: .dockerignore  .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: test.py
app/clients/: advertisement.py
app/configs/: __init__.py
app/configs/graphql/: __init__.py  clients.py
app/configs/grpc/: __init__.py  database.py
app/controllers/graphql/: mutations.py  queries.py  schema.py  subscriptions.py
app/controllers/grpc/: advertisement.py
app/helpers/: checker.py
app/inputs/: advertisement.py
app/managers/: advertisement.py
app/schemas/: advertisement.py
app/servers/: graphql.py  grpc.py
app/types/: advertisement.py
app/utils/: checker.py  convertor.py
data/: advertisement.json
proto/: advertisement.proto
workers/: parser.py
